--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <groupId>com.demo</groupId>
     <artifactId>EasyAgent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>agent</name>
-    <description>agent</description>
+    <name>agentEntity</name>
+    <description>agentEntity</description>
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -74,6 +74,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-mcp</artifactId>
             <version>1.1.0-beta7</version>
@@ -87,6 +92,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.6.13</version>
         </dependency>
 
 
@@ -129,7 +140,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.demo.agent.AgentApplication</mainClass>
+                    <mainClass>com.demo.agentEntity.AgentApplication</mainClass>
                     <skip>true</skip>
                 </configuration>
                 <executions>
